tests/paczka1/fuzzy1/21843732.err
Error in line 4: A136 A136 45,0
Error in line 22: ebOHoZ A661 38,4
Error in line 29: ebOHoZ A136 39,4
Error in line 25: V1XWtwnO4t A661 42,2
